# FVM

./: .gitignore  CMakeLists.txt  FVM.cpp  Mesh.cpp  Mesh.h  README.md  base.msh  calculateGeom.cpp  calculateGeom.h  calculateOperators.cpp  calculateOperators.h  coord.h  functions.cpp  functions.h  initiateFields.cpp  initiateFields.h  main.cpp  output.plt  outputToTecplot.cpp  outputToTecplot.h  point.h  tecioFunctions.h
lib/tecio/include/: TECXXX.h
src/: FVM.cpp  calculateGeom.cpp  calculateGeom.h  calculateOperators.h  functions.cpp  functions.h  tecioFunctions.cpp  tecioFunctions.h
tools/: build.sh
